# web-sight

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/linters/: .python-lint
.github/workflows/: deploy.yml
blog/general/: no-longer-available.md
blog/tech/: how-i-deploy.md
sight/: elements.py  models.py  secret.py  sight.ini  sight.py  wsgi.py
sight/blog/tech/: how-i-deploy.md
sight/files/: blog.css  style.css
sight/templates/: blog.tpl  index.tpl
